--- a/HYParentalGate/HYParentalGateViewController.xib
+++ b/HYParentalGate/HYParentalGateViewController.xib
@@ -252,7 +252,7 @@
                     <rect key="frame" x="0.0" y="124" width="600" height="90"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lM6-w3-fia">
-                            <rect key="frame" x="407" y="21.5" width="76" height="47.000000000000014"/>
+                            <rect key="frame" x="407" y="21.5" width="76" height="47"/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="76" id="Otw-SW-35l"/>
