--- a/HYParentalGate/HYParentalGateViewController.xib
+++ b/HYParentalGate/HYParentalGateViewController.xib
@@ -253,12 +253,13 @@
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lM6-w3-fia">
                             <rect key="frame" x="407" y="21.5" width="76" height="47"/>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="76" id="Otw-SW-35l"/>
                                 <constraint firstAttribute="height" constant="47" id="pel-ld-ynB"/>
                             </constraints>
-                            <inset key="imageEdgeInsets" minX="11" minY="0.0" maxX="0.0" maxY="0.0"/>
+                            <state key="normal" image="erase"/>
+                            <state key="highlighted" image="erase-pressed"/>
                             <connections>
                                 <action selector="onEraseAction:" destination="-1" eventType="touchUpInside" id="wK1-lX-WoO"/>
                             </connections>
@@ -349,4 +350,8 @@
             <point key="canvasLocation" x="71" y="153"/>
         </view>
     </objects>
+    <resources>
+        <image name="erase" width="76" height="47"/>
+        <image name="erase-pressed" width="76" height="47"/>
+    </resources>
 </document>
